css: correct vertical margin of sidenote on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -275,7 +275,7 @@ label.margin-toggle:not(.sidenote-number) {
         left: 1rem;
         clear: both;
         width: 95%;
-        margin: 1rem 2.5%;
+        margin: 0.9rem 2.5% 0;
         vertical-align: baseline;
         position: relative;
     }
